--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
+    "mysql2": "^3.5.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17",
+    "typeorm-transactional": "^0.4.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
