handle api authen for demo app

--- a/.env
+++ b/.env
@@ -9,3 +9,9 @@ RDS_USERNAME=root
 RDS_PASSWORD=1234
 RDS_DATABASE=db_blog
 RDS_HOST=localhost
+
+# TOKEN
+JWT_ACCESS_TOKEN_EXPIRE_TIME=3600
+JWT_REFRESH_TOKEN_EXPIRE_TIME=7200
+JWT_ACCESS_KEY=access-token-key
+JWT_EXPIRE_TIME=7200
