--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "aws-sdk": "^2.1430.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
     "moment": "^2.29.4",
