--- a/package.json
+++ b/package.json
@@ -33,16 +33,22 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.1.3",
     "@nestjs/typeorm": "^10.0.0",
     "aws-sdk": "^2.1430.0",
+    "base64-img": "^1.0.4",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.40.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
+    "graphql-upload": "^15.0.2",
     "moment": "^2.29.4",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.5.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
