--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.1.3",
     "@nestjs/typeorm": "^10.0.0",
+    "apollo-server-core": "^3.12.0",
     "aws-sdk": "^2.1430.0",
     "base64-img": "^1.0.4",
     "bcrypt": "^5.1.0",
@@ -47,6 +48,7 @@
     "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
     "graphql-upload": "^15.0.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.5.2",
