--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   blog_app:
     image: blog_app:latest
-    build: 
+    build:
       context: .
       target: builder
     container_name: blog_app
@@ -32,10 +32,14 @@ services:
       - 3000:3000
     volumes:
       - ./src:/builder/app/src
+    deploy:
+      resources:
+        limits:
+          memory: 2G
     networks:
       - nw_blog_app_mysql
-    depends_on: 
-    - blog_db
+    depends_on:
+      - blog_db
 
   blog_db:
     image: mysql:8.0
@@ -43,12 +47,16 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: $RDS_PASSWORD
       MYSQL_DATABASE: $RDS_DATABASE
-      MYSQL_USER: $RDS_USERNAME 
+      MYSQL_USER: $RDS_USERNAME
       MYSQL_PASSWORD: $RDS_PASSWORD
     ports:
       - 3307:3306
     volumes:
       - ./docker/mysql:/var/lib/mysql
+    deploy:
+      resources:
+        limits:
+          memory: 1G
     networks:
       - nw_blog_app_mysql
 
